Fix footer spacing and empty space below footer

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,34 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@400;500;700&display=swap");
 
 html {
-  overflow-x: hidden;
-  overflow-y: scroll;
-  width: 100%;
 }
 
 body {
-  width: 100vw;
-  height: fit-content;
-  min-height: 100%;
-
   margin: 0;
+  padding: 0;
   font-family: "Montserrat", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
-
-  &::-webkit-scrollbar {
-    width: 0.5rem;
-  }
-
-  &::-webkit-scrollbar-track {
-    background: var(--background);
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: var(--foreground);
-    border-radius: 0.125rem;
-  }
 
   @media only screen and (max-width: 1000px) {
     font-size: 10px;
