--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -24,12 +24,8 @@
     background-repeat: no-repeat;
   }
 
-  width: 100vw;
-  position: absolute;
-  min-height: 100vh;
   text-align: center;
   background-color: var(--background);
-  margin-bottom: -1em;
 
   display: flex;
   flex-direction: column;
